--- a/E1-Trianble/E1.vcxproj
+++ b/E1-Trianble/E1.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{37bcff5b-3e9f-4353-9f5e-cf6089f535cd}</ProjectGuid>
     <RootNamespace>E1</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>E1-Triangle</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -157,6 +158,9 @@
     <ClCompile Include="source\GameApp.cpp" />
     <ClCompile Include="source\GameTimer.cpp" />
     <ClCompile Include="source\Main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\E2-Cube\Cube.vcxproj" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
