--- a/E1-Trianble/E1.vcxproj.filters
+++ b/E1-Trianble/E1.vcxproj.filters
@@ -51,4 +51,7 @@
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="..\E2-Cube\Cube.vcxproj" />
+  </ItemGroup>
 </Project>
