--- a/E4-Light/E4-Light.vcxproj
+++ b/E4-Light/E4-Light.vcxproj
@@ -213,16 +213,16 @@
     <None Include="hlsl\LightHelper.hlsli" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="hlsl\PS.hlsl">
+    <FxCompile Include="hlsl\PS.hlsl">
       <FileType>Document</FileType>
-    </None>
-    <None Include="hlsl\VS.hlsl">
-      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Vertex</ShaderType>
-      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Vertex</ShaderType>
+    </FxCompile>
+    <FxCompile Include="hlsl\VS.hlsl">
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Effect</ShaderType>
+      <ShaderType Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Effect</ShaderType>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Vertex</ShaderType>
       <ShaderType Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Vertex</ShaderType>
       <FileType>Document</FileType>
-    </None>
+    </FxCompile>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
