--- a/E6-Camera/E6-Camera.vcxproj.filters
+++ b/E6-Camera/E6-Camera.vcxproj.filters
@@ -54,6 +54,9 @@
     <ClInclude Include="include\Camera.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="include\Control.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="source\d3dApp.cpp">
@@ -90,6 +93,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="source\Camera.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="source\Control.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
