--- a/E7-Framework/E7-Framework.vcxproj
+++ b/E7-Framework/E7-Framework.vcxproj
@@ -21,8 +21,8 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{d36a25ee-c6f7-444e-b578-7d34dd0afab4}</ProjectGuid>
-    <RootNamespace>E6Camera</RootNamespace>
+    <ProjectGuid>{ac940c72-e39d-4008-8db7-4c94853e69e8}</ProjectGuid>
+    <RootNamespace>E7Framework</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
@@ -88,13 +88,19 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalOptions>/utf-8 %(AdditionalOptions)</AdditionalOptions>
       <AdditionalIncludeDirectories>$(ProjectDir)/include</AdditionalIncludeDirectories>
+      <AdditionalOptions>/utf-8 %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
+    <PreBuildEvent>
+      <Command>DEL $(ProjectDir)hlsl\*.cso</Command>
+    </PreBuildEvent>
+    <PostBuildEvent>
+      <Command>editbin /SUBSYSTEM:CONSOLE $(OutDir)$(TargetName)$(TargetExt)</Command>
+    </PostBuildEvent>
     <FxCompile>
       <EntryPointName />
     </FxCompile>
@@ -104,12 +110,6 @@
     <FxCompile>
       <ShaderModel>5.0</ShaderModel>
     </FxCompile>
-    <PreBuildEvent>
-      <Command>DEL $(ProjectDir)hlsl\*.cso</Command>
-    </PreBuildEvent>
-    <PostBuildEvent>
-      <Command>editbin /SUBSYSTEM:CONSOLE $(OutDir)$(TargetName)$(TargetExt)</Command>
-    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <ClCompile>
@@ -119,8 +119,8 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalOptions>/utf-8 %(AdditionalOptions)</AdditionalOptions>
       <AdditionalIncludeDirectories>$(ProjectDir)/include</AdditionalIncludeDirectories>
+      <AdditionalOptions>/utf-8 %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -128,6 +128,12 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
+    <PreBuildEvent>
+      <Command>DEL $(ProjectDir)hlsl\*.cso</Command>
+    </PreBuildEvent>
+    <PostBuildEvent>
+      <Command>editbin /SUBSYSTEM:CONSOLE $(OutDir)$(TargetName)$(TargetExt)</Command>
+    </PostBuildEvent>
     <FxCompile>
       <EntryPointName />
     </FxCompile>
@@ -137,12 +143,6 @@
     <FxCompile>
       <ShaderModel>5.0</ShaderModel>
     </FxCompile>
-    <PreBuildEvent>
-      <Command>DEL $(ProjectDir)hlsl\*.cso</Command>
-    </PreBuildEvent>
-    <PostBuildEvent>
-      <Command>editbin /SUBSYSTEM:CONSOLE $(OutDir)$(TargetName)$(TargetExt)</Command>
-    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
@@ -150,13 +150,19 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalOptions>/utf-8 %(AdditionalOptions)</AdditionalOptions>
       <AdditionalIncludeDirectories>$(ProjectDir)/include</AdditionalIncludeDirectories>
+      <AdditionalOptions>/utf-8 %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
+    <PreBuildEvent>
+      <Command>DEL $(ProjectDir)hlsl\*.cso</Command>
+    </PreBuildEvent>
+    <PostBuildEvent>
+      <Command>editbin /SUBSYSTEM:CONSOLE $(OutDir)$(TargetName)$(TargetExt)</Command>
+    </PostBuildEvent>
     <FxCompile>
       <EntryPointName />
     </FxCompile>
@@ -166,12 +172,6 @@
     <FxCompile>
       <ShaderModel>5.0</ShaderModel>
     </FxCompile>
-    <PreBuildEvent>
-      <Command>DEL $(ProjectDir)hlsl\*.cso</Command>
-    </PreBuildEvent>
-    <PostBuildEvent>
-      <Command>editbin /SUBSYSTEM:CONSOLE $(OutDir)$(TargetName)$(TargetExt)</Command>
-    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <ClCompile>
@@ -181,8 +181,8 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_WINDOWS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalOptions>/utf-8 %(AdditionalOptions)</AdditionalOptions>
       <AdditionalIncludeDirectories>$(ProjectDir)/include</AdditionalIncludeDirectories>
+      <AdditionalOptions>/utf-8 %(AdditionalOptions)</AdditionalOptions>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -190,6 +190,12 @@
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
+    <PreBuildEvent>
+      <Command>DEL $(ProjectDir)hlsl\*.cso</Command>
+    </PreBuildEvent>
+    <PostBuildEvent>
+      <Command>editbin /SUBSYSTEM:CONSOLE $(OutDir)$(TargetName)$(TargetExt)</Command>
+    </PostBuildEvent>
     <FxCompile>
       <EntryPointName />
     </FxCompile>
@@ -199,24 +205,10 @@
     <FxCompile>
       <ShaderModel>5.0</ShaderModel>
     </FxCompile>
-    <PreBuildEvent>
-      <Command>DEL $(ProjectDir)hlsl\*.cso</Command>
-    </PreBuildEvent>
-    <PostBuildEvent>
-      <Command>editbin /SUBSYSTEM:CONSOLE $(OutDir)$(TargetName)$(TargetExt)</Command>
-    </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <None Include="hlsl\Basic.hlsli" />
-    <None Include="hlsl\LightHelper.hlsli" />
-  </ItemGroup>
-  <ItemGroup>
-    <FxCompile Include="hlsl\Basic_PS_3D.hlsl" />
-    <FxCompile Include="hlsl\Basic_VS_3D.hlsl" />
-  </ItemGroup>
-  <ItemGroup>
     <ClInclude Include="include\Camera.h" />
-    <ClInclude Include="include\Resource.h" />
+    <ClInclude Include="include\Control2.h" />
     <ClInclude Include="include\d3dApp.h" />
     <ClInclude Include="include\d3dUtil.h" />
     <ClInclude Include="include\Data.h" />
@@ -231,7 +223,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="source\Camera.cpp" />
-    <ClCompile Include="source\Resource.cpp" />
+    <ClCompile Include="source\Control.cpp" />
     <ClCompile Include="source\d3dApp.cpp" />
     <ClCompile Include="source\d3dUtil.cpp" />
     <ClCompile Include="source\DDSTextureLoader.cpp" />
@@ -243,6 +235,14 @@
     <ClCompile Include="source\Main.cpp" />
     <ClCompile Include="source\Mouse.cpp" />
     <ClCompile Include="source\WICTextureLoader.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="hlsl\Basic.hlsli" />
+    <None Include="hlsl\LightHelper.hlsli" />
+  </ItemGroup>
+  <ItemGroup>
+    <FxCompile Include="hlsl\Basic_PS_3D.hlsl" />
+    <FxCompile Include="hlsl\Basic_VS_3D.hlsl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
