--- a/E6-Camera/E6-Camera.vcxproj.filters
+++ b/E6-Camera/E6-Camera.vcxproj.filters
@@ -79,6 +79,12 @@
     <ClInclude Include="include\GameObject.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="include\Object.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Light.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="source\Camera.cpp">
@@ -117,13 +123,16 @@
     <ClCompile Include="source\WICTextureLoader.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="source\Resource.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
     <ClCompile Include="source\Transform.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="source\GameObject.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="source\Resource.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="source\Manager.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
