--- a/E6-Camera/E6-Camera.vcxproj
+++ b/E6-Camera/E6-Camera.vcxproj
@@ -217,6 +217,8 @@
   <ItemGroup>
     <ClInclude Include="include\Camera.h" />
     <ClInclude Include="include\GameObject.h" />
+    <ClInclude Include="include\Light.h" />
+    <ClInclude Include="include\Object.h" />
     <ClInclude Include="include\Resource.h" />
     <ClInclude Include="include\d3dApp.h" />
     <ClInclude Include="include\d3dUtil.h" />
@@ -234,6 +236,7 @@
   <ItemGroup>
     <ClCompile Include="source\Camera.cpp" />
     <ClCompile Include="source\GameObject.cpp" />
+    <ClCompile Include="source\Manager.cpp" />
     <ClCompile Include="source\Resource.cpp" />
     <ClCompile Include="source\d3dApp.cpp" />
     <ClCompile Include="source\d3dUtil.cpp" />
