--- a/E6-Camera/E6-Camera.vcxproj.filters
+++ b/E6-Camera/E6-Camera.vcxproj.filters
@@ -79,9 +79,6 @@
     <ClInclude Include="include\GameObject.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="include\Object.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
     <ClInclude Include="include\Light.h">
       <Filter>头文件</Filter>
     </ClInclude>
@@ -133,6 +130,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="source\Manager.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="source\Light.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
